# Tugi-Artifact

./: .dockerignore  Dockerfile  README.md  filtered_US_data.csv  pyproject.toml  streamlit.py
.github/workflows/: main.yml
src/: app.py  streamlit.py
src/app/: __init__.py  display.py  main.py  var.py
src/data/: filtered_US_data.csv  macro_seasonal_variables_data.csv
src/tests/: test_var.py
test_data/: test_var.csv
tests/: test_display.py  test_var.py
