[tool.poetry]
name = "2023-layoff-description"
version = "0.2.0"
description = ""
authors = ["tuduun <gantulga01@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
PyQt5 = "5.15.2"
streamlit = "*"
pandas = "*"
numpy = "*"
seaborn = "*"
matplotlib = "*"
statsmodels = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
