[tool.poetry]
name = "2023-layoff-description"
version = "0.2.0"
description = ""
authors = ["tuduun <gantulga01@allegheny.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
pyqt5 = "=5.15.10"   
pyqt5-qt5 = "=5.15.2"
streamlit = "*"
pandas = "*"
tabulate = "*"
numpy = "*"
matplotlib = "*"
statsmodels = "*"
ruff = "*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.4.4"
ruff = "*"



[tool.pytest.ini_options]
testpaths = [
    "tests"
]

pythonpath = [
    "."
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
